fixed alignment on Register button

--- a/less/main.less
+++ b/less/main.less
@@ -94,13 +94,13 @@ header {
     }
 		.event-description{
 			font-size: 20px;
-      margin-top: 40px;
+      margin-top: 30px;
 			font-weight:600;
       color: @darkpurple;
       text-transform: uppercase;
 		}
     .date{
-      color: @white;
+      //color: @white;
       text-transform: uppercase;
     }
 	}
